[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/States/General/Stunned.gd" type="Script" id=1]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 9.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 1, 0 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.5
orbit_velocity_random = 0.0

[node name="Stunned" type="Node"]
script = ExtResource( 1 )

[node name="StunTimer" type="Timer" parent="."]

[node name="DazedParticles" type="Particles2D" parent="."]
position = Vector2( 0, -48 )
emitting = false
amount = 12
preprocess = 1.0
process_material = SubResource( 1 )

[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
